ulang taun risa 2

--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
   <div id="login-page" class="page active login-page">
     <div id="login-container">
       <div class="image-box">
-        <img src="..\selamat-ultah-main\image\heart.jpg" alt="Couple illustration"/>
+        <img src="image\heart.jpg" alt="Love"/>
       </div>
       <div id="title-text">enter passcode</div>
       <input id="passcodeInput" type="text" readonly/>
@@ -634,7 +634,7 @@
       </div>
       
       <section class="flex items-center space-x-5 mb-8">
-        <img src="..\selamat-ultah-main\image\risa1.jpg" class="rounded-full border-4 border-dashed border-pink-400 shadow-lg" width="64" height="64"/>
+        <img src="image\risa1.jpg" class="rounded-full border-4 border-dashed border-pink-400 shadow-lg" width="64" height="64"/>
         <div class="bg-pink-400 rounded-full px-5 py-3 text-white text-base font-semibold max-w-[260px] shadow-md">
          How long has it been in this world?
          <i class="fas fa-heart ml-2 pulse-heart"></i>
@@ -687,41 +687,41 @@
 
       <main class="grid grid-cols-2 gap-6">
         <div class="polaroid" data-index="0">
-          <img src="D:\Belajar\iseng\selamat-ultah-main\image\risakecil2.jpg"/>
+          <img src="image\risakecil2.jpg"/>
           <div class="polaroid-caption">Risa Kicil Senyum</div>
         </div>
         <div class="polaroid" data-index="1">
-          <img src="D:\Belajar\iseng\selamat-ultah-main\image\risakecil4.jpg"/>
+          <img src="risakecil4.jpg"/>
           <div class="polaroid-caption">Risa Kicil Main Tanah</div>
         </div>
         <div class="polaroid" data-index="2">
-          <img src="D:\Belajar\iseng\selamat-ultah-main\image\risakecil3.jpg"/>
+          <img src="image\risakecil3.jpg"/>
           <div class="polaroid-caption">Risa Kicil Digendong Om Nanang</div>
         </div>
         <div class="polaroid" data-index="3">
-          <img src="D:\Belajar\iseng\selamat-ultah-main\image\risakecil1 (1).jpg"/>
+          <img src="image\risakecil1 (1).jpg"/>
           <div class="polaroid-caption">Risa Kicil Cekulaa</div>
         </div>
-        <div class="polaroid" data-index="3">
-          <img src="D:\Belajar\iseng\selamat-ultah-main\image\risabesar.jpg"/>
+        <div class="polaroid" data-index="4">
+          <img src="image\risabesar.jpg"/>
           <div class="polaroid-caption">Risa Besar</div>
         </div>
-        <div class="polaroid" data-index="3">
-          <img src="D:\Belajar\iseng\selamat-ultah-main\image\risakuliah.jpg"/>
+        <div class="polaroid" data-index="5">
+          <img src="image\risakuliah.jpg"/>
           <div class="polaroid-caption">Risa Kuliah</div>
         </div>
-        <div class="polaroid" data-index="3">
-          <img src="D:\Belajar\iseng\selamat-ultah-main\image\risawisuda.jpg"/>
+        <div class="polaroid" data-index="6">
+          <img src="image\risawisuda.jpg"/>
           <div class="polaroid-caption">Risa Wisuda</div>
         </div>
-        <div class="polaroid" data-index="3">
-          <img src="D:\Belajar\iseng\selamat-ultah-main\image\risapacaran.jpg"/>
+        <div class="polaroid" data-index="7">
+          <img src="image\risapacaran.jpg"/>
           <div class="polaroid-caption">Risa Pacaran</div>
         </div>
       </main>
 
       <footer class="mt-12 text-center w-full">
-  <a href="../selamat-ultah-main/indexx.html" class="next-button">Next</a>
+  <a href="selamat-ultah-main/indexx.html" class="next-button">Next</a>
   <button onclick="showPage('day-page')" class="next-button">Prev</button>
 </footer>
 </button>
