ulang taun risa 3

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <title>Risa Birthdays</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="..\selamat-ultah-main\image\lovelogo.png" type="image/x-icon" />
+  <link rel="icon" href="image\lovelogo.png" type="image/x-icon" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Montserrat:wght@700&family=Open+Sans&family=Indie+Flower&family=Kanit&display=swap" rel="stylesheet" />
   <style>
@@ -691,7 +691,7 @@
           <div class="polaroid-caption">Risa Kicil Senyum</div>
         </div>
         <div class="polaroid" data-index="1">
-          <img src="risakecil4.jpg"/>
+          <img src="image\risakecil4.jpg"/>
           <div class="polaroid-caption">Risa Kicil Main Tanah</div>
         </div>
         <div class="polaroid" data-index="2">
