ulang taun risa 4

--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
       </main>
 
       <footer class="mt-12 text-center w-full">
-  <a href="selamat-ultah-main/indexx.html" class="next-button">Next</a>
+  <a href="indexx.html" class="next-button">Next</a>
   <button onclick="showPage('day-page')" class="next-button">Prev</button>
 </footer>
 </button>
