--- a/indexx.html
+++ b/indexx.html
@@ -274,7 +274,7 @@
 
     <div class="mt-4 text-center">
       <button
-        onclick="window.location.href='../selamat-ultah-main/index.html'"
+        onclick="window.location.href='index.html'"
         class="px-4 py-2 bg-pink-500 text-white rounded-lg shadow hover:bg-pink-600 transition"
       >
         Kembali Ke Halaman Utama
