ulang taun risa 6

--- a/indexx.html
+++ b/indexx.html
@@ -266,7 +266,7 @@
       <div class="hearts" id="hearts"></div>
       <audio id="bgMusic" loop>
         <source
-          src="D:\Belajar\iseng\selamat-ultah-main\image\The Overtunes - I Still Love You.mp3"
+          src="image\The Overtunes - I Still Love You.mp3"
           type="audio/mpeg"
         />
       </audio>
